--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/global.css">
     <link rel="stylesheet" href="assets/main.css">
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <title>Calculator</title>
 </head>
 
